change sign up achievement

--- a/app/views/modals/headlines/_welcome.html.haml
+++ b/app/views/modals/headlines/_welcome.html.haml
@@ -45,7 +45,7 @@
     .header     
       %h1{ style: "font-size: 32px;" } New high score!              
       %h2{ style: "font-size: 18px;" }
-        Save your high score, reserve your username, and keep racking up points!
+        Save your score, reserve your username, and keep racking up points!
     .body.centered{ style: "margin-top: 17px; margin-bottom: 0; " }
       .signup
         = link_to "/auth/google_oauth2", class: "btn danger" do
