--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -72,7 +72,7 @@
             %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", alt: "Tip"}
             %p Use Tasks to verify the things you've done and guide you towards what to do next. 
           - if @achievement_tasks.empty?
-            %p No Tasks available.
+            %p No Tasks are available at the moment. Check back again later.
           - else
             %table
               - @achievement_tasks.each do |t|
