--- a/app/views/pages/profile.html.haml
+++ b/app/views/pages/profile.html.haml
@@ -149,7 +149,7 @@
                   = image_tag enrollment.path.picture, style: "width: 40px; height: 40px;"
                 What I can do...
               - if @user == current_user
-                = link_to "Add new CR", challenge_path(enrollment.path.permalink, c: true, type: Task::CHECKIN), class: "button button-small button-actionable", style: "float: right; right: -13px; position: relative;"
+                = link_to "Add new CR", challenge_path(enrollment.path.permalink, c: true, type: Task::CHECKIN), class: "button button-small button-actionable", style: "float: right; top: 2px; right: -3px; position: relative;"
               %h4 #{enrollment.creative_responses.count} Creative Responses
               %div.profilecontent
                 = render "newsfeed/feed", feed: NewsfeedHelper::Feed.new(params, current_user, nil, enrollment.creative_responses.where("completed_tasks.status_id = ?", Answer::CORRECT).limit(5))                
@@ -162,7 +162,7 @@
                   = image_tag enrollment.path.picture, style: "width: 40px; height: 40px;"
                 What I have done...
               - if @user == current_user
-                = link_to "Add new Task", challenge_path(enrollment.path.permalink, c: true, type: Task::CHECKIN), class: "button button-small button-actionable", style: "float: right; right: -13px; position: relative;"
+                = link_to "Add new Task", challenge_path(enrollment.path.permalink, c: true, type: Task::CHECKIN), class: "button button-small button-actionable", style: "float: right; top: 2px; right: -3px; position: relative;"
               %h4 #{enrollment.tasks.count} Tasks Completed
               %div.profilecontent
                 = render "newsfeed/feed", feed: NewsfeedHelper::Feed.new(params, current_user, nil, enrollment.tasks.limit(5))
