--- a/app/views/sections/pre_boss.html.haml
+++ b/app/views/sections/pre_boss.html.haml
@@ -1,18 +1,13 @@
 :css
   .body.container { border: 0px; background-color: transparent; box-shadow: none; }
-  .quizcontainer { width: 676px; }
+  .quizcontainer { width: 692px; }
 %div.quizcontainer
   %div.quizspace
-    %div.quizheader
-      = image_tag @section.path.path_pic, style: "height:50px; width:50px;", alt: "#{@section.path.name}"
-      %div{ style: "display:inline-block;" }
-        %span <strong>#{@section.path.name}</strong>
-        %div#idprogressbar
     %div
-      = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/GiantStoney.png", style: "width:60px; height:73px; margin:0; display: inline-block; vertical-align: top;", alt: "Stoney"
-      %div{ style: "display: inline-block; margin-left: 8px; font-size:50px; line-height:58px; margin-top:-6px;"}
+      = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/GiantStoney.png", style: "width:117px; height:162px; margin:0; display: inline-block; vertical-align: top;", alt: "Stoney"
+      %div{ style: "display: inline-block; margin-left: 8px; font-size:84px; line-height:95px; margin-top:-6px;"}
         Not bad...
-        %div{ style: "font-size: 21px; margin-left: 0; line-height: 21px; " }
+        %div{ style: "font-size: 27px; margin-left: 0; line-height: 21px; " }
           But can you handle the <strong>Boss Question</strong>?
-      %div{ style: "margin-left: 50px; margin-top: 20px;"}       
-        = link_to "I'm ready!", challenge_path(@section.path.permalink, c: true, p: @section.points_earned(current_user)), class: "button button-actionable", style: "float: right;"
+        %div      
+          = link_to "I'm ready!", challenge_path(@section.path.permalink, c: true, p: @section.points_earned(current_user)), class: "button button-actionable", style: "float: right; line-height: 20px; margin-top: 18px;"
