--- a/app/views/modals/headlines/_achievements.haml
+++ b/app/views/modals/headlines/_achievements.haml
@@ -26,4 +26,4 @@
       %button.button.button-info.button-large{ onclick: sharing_popup_javascript(:twitter, challenge_url(@path.permalink), sharing_text) } Share on Twitter
   
   .exit{ style: "float: right; margin-top: 24px;" }
-    %a{ onclick: "$(this).parents('.headlines').fadeOut(300, function(){ $(this).remove(); if($('.headlines').size() > 0){ $('.headlines:first').show() } else { $('.launchpadcontent').show(); } });" } Continue to Launchpad »
+    %a{ onclick: "$.next_headline($(this).parents('.headlines'));" } Continue to Launchpad »
