--- a/app/views/modals/headlines/_welcome.html.haml
+++ b/app/views/modals/headlines/_welcome.html.haml
@@ -29,7 +29,7 @@
   %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/GiantStoney.png", style: "display: inline-block; height: 250px; vertical-align:top; position: relative; top:32px; "}
   %div{ style: "display: inline-block; width: 65%; margin-top:10px"}
     .header     
-      %h1{ style: "font-size: 32px;" } New high score!              
+      %h1{ style: "font-size: 32px;" } Don't lose your progress!           
       %h2{ style: "font-size: 18px;" }
         Save your score, reserve your username, and keep racking up points!
     .body.centered{ style: "margin-top: 17px; margin-bottom: 0; " }
