--- a/app/views/sections/pre_boss.html.haml
+++ b/app/views/sections/pre_boss.html.haml
@@ -5,7 +5,7 @@
   %div.quizspace
     %div
       = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/GiantStoney.png", style: "width:117px; height:162px; margin:0; display: inline-block; vertical-align: top;", alt: "Stoney"
-      %div{ style: "display: inline-block; margin-left: 8px; font-size:84px; line-height:95px; margin-top:-6px;"}
+      %div{ style: "display: inline-block; margin-left: 0; font-size:84px; line-height:95px; margin-top:-6px;"}
         Not bad...
         %div{ style: "font-size: 27px; margin-left: 0; line-height: 21px; " }
           But can you handle the <strong>Boss Question</strong>?
