--- a/app/views/newsfeed/_post.html.haml
+++ b/app/views/newsfeed/_post.html.haml
@@ -50,14 +50,14 @@
       - if post.task.text?
         - if post.content && post.content.downcase.include?("<html>")
           .preview
-            %div.onhover{ style: "width: 100%; text-align: right; opacity: 0.7; padding: 3px; background-color: white; display: none; position: absolute; float: right; z-index: 2; font-size: 15px; margin-top: 5px;" }
-              %span.reload{ style: "color: black; cursor: pointer; text-decoration: underline; cursor: pointer;", onclick: "$(this).parents('.CRarea').find('iframe').attr('src', $(this).parents('.CRarea').find('iframe').attr('src'));" } Reload
+            %div#sliderbar1
+              %span.reload{ style: "color: #404040; cursor: pointer;", onclick: "$(this).parents('.CRarea').find('iframe').attr('src', $(this).parents('.CRarea').find('iframe').attr('src'));" } Reload
               |
-              %span.view_raw{ style: "text-decoration: underline; color: black; padding-right: 5px;cursor: pointer;", onclick: "$(this).parents('.CRarea').find('.preview').hide(); $(this).parents('.CRarea').find('.raw').show();" } View Raw
+              %span.view_raw{ style: "color: #404040; padding-right: 5px;cursor: pointer;", onclick: "$(this).parents('.CRarea').find('.preview').hide(); $(this).parents('.CRarea').find('.raw').show();" } View Raw
             %iframe{ src: raw_path(post.submitted_answer.id), style: "min-height: 150px; width: 100%; border: 0; z-index: 1;" }
           .raw.hide
-            %div.onhover{ style: "width: 100%; text-align: right; opacity: 0.7; padding: 3px; background-color: white; display: none; position: absolute; float: right; z-index: 2; font-size: 15px; margin-top: 5px;" }
-              %span.view_preview{ style: "text-decoration: underline; color: black; padding-right: 5px; cursor: pointer;", onclick: "$(this).parents('.CRarea').find('.raw').hide(); $(this).parents('.CRarea').find('.preview').show();"} View Preview
+            %div#sliderbar2
+              %span.view_preview{ style: "color: #404040; padding-right: 5px; cursor: pointer;", onclick: "$(this).parents('.CRarea').find('.raw').hide(); $(this).parents('.CRarea').find('.preview').show();"} View Preview
             %code.content{ style: "word-break:normal;" }= post.content
         - else
           %code.content{ style: "word-break:normal;" }= post.content
@@ -91,3 +91,6 @@
     - unless post.caption.blank?
       %div.post_caption= post.caption
     = render "comments/comments", social_details(post)
+    
+:javascript
+
