--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -30,9 +30,9 @@ pre.unstyled { padding: 0px; background-color: inherit; border: 0px; word-break:
 .newsfeed { border: 1px solid rgba(0, 0, 0, .1); border-radius: 6px; background-clip:padding-box; background-color:white; min-height: 550px; }
 .CRarea { overflow-y:auto; background-color: transparent; background-image: -moz-linear-gradient(top,rgba(0, 0, 0, .06),transparent);background-image: -ms-linear-gradient(top,rgba(0, 0, 0, .06),transparent);background-image: -o-linear-gradient(top,rgba(0, 0, 0, .06),transparent);background-image: -webkit-gradient(linear, 0 0, 0 100%, from(rgba(0, 0, 0, .06)), to(transparent));background-image: -webkit-linear-gradient(top,rgba(0, 0, 0, .06),transparent);background-image: linear-gradient(top,rgba(0, 0, 0, .06),transparent); border-top: 1px solid rgba(0, 0, 0, .2); border-bottom: 1px solid rgba(0, 0, 0, .1); margin:12px -12px -7px -12px; }
 .CRarea img { max-width: 100%; max-height: 350px; border-color:#ccc; border-style:solid; border-width: 0px; display:block; margin-left:auto; margin-right:auto; }
-#sliderbar1, #sliderbar2 { width: 150px; margin-left:65%; border-right: 1px solid rgba(0,0,0,.2); border-left: 1px solid rgba(0,0,0,.2); border-bottom: 1px solid rgba(0,0,0,.2); border-bottom-right-radius: 4px; border-bottom-left-radius: 4px; display: none; text-align: center; opacity: 0.8; padding: 3px; background-color: white; position: absolute; float: right; z-index: 2; font-size: 15px; }
-#sliderbar1:hover, #sliderbar2:hover { opacity: 1; }
-#sliderbar1 span:hover, #sliderbar2 span:hover { text-decoration: underline; }
+.sliderbar1, .sliderbar2 { width: 150px; margin-left:65%; border-right: 1px solid rgba(0,0,0,.2); border-left: 1px solid rgba(0,0,0,.2); border-bottom: 1px solid rgba(0,0,0,.2); border-bottom-right-radius: 4px; border-bottom-left-radius: 4px; display: none; text-align: center; opacity: 0.8; padding: 3px; background-color: white; position: absolute; float: right; z-index: 2; font-size: 15px; }
+.sliderbar1:hover, .sliderbar2:hover { opacity: 1; }
+.sliderbar1 span:hover, .sliderbar2 span:hover { text-decoration: underline; }
 .obfuscation{ height:250px; background-color:whitesmoke; background-image:none; text-align: center; }
 .obfuscation img{ margin-top:38px; }
 .obfuscation a{ color:gray; }
