--- a/app/views/sections/take.html.haml
+++ b/app/views/sections/take.html.haml
@@ -1,4 +1,4 @@
-%div.quizcontainer{ style: "margin-top: 90px;"}
+%div.quizcontainer{ style: "margin-top: 70px;"}
   = render "modals/report_issue"
   
   = form_for(@task, url: took_section_path(@section, task_id: @task.id), html: { id: "challenge_form", style: "margin: 0;" }) do |f|
@@ -8,7 +8,7 @@
           :javascript
             $(function(){ $(".draft_saved").fadeOut(8000); });
           %div.draft_saved{ style: "float: right; font-size: 15px;" } Draft saved...
-        = image_tag @path.path_pic, style: "height:50px; width:50px;", alt: "#{@path.name}"
+        = image_tag @path.path_pic, alt: "#{@path.name}"
         %div{ style: "display:inline-block;" }
           %span
             %strong #{@path.name}:
