--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -1,6 +1,8 @@
 %div.sectioninfocontainer
   %div.launchpadCRcolumn
     %div.launchpadcolumnheader
+      - if current_user.guest_user?
+        %button.login_link.button.button-small.button-actionable{ style: "margin-top: -5px; text-shadow:none;", onclick: "$('#login_modal').modal({ keyboard: true, backdrop: 'static', show: true });" } Save Score
       - if @enrollment.contribution_unlocked?
         %button#editor_link.button.button-small.button-actionable{ style: "margin-top: -5px; text-shadow:none;" } Create a Question
       %ul.nav.nav-tabs
