--- a/app/views/tasks/_take_image.html.haml
+++ b/app/views/tasks/_take_image.html.haml
@@ -2,7 +2,7 @@
   %div.CRquestionspace{ style: "width: 98%;" }
     %span.cr_question_header Creative Response:
     %p
-      %pre.CRquestion{ style: "margin-left:25px; "}= @task.question
+      %pre.CRquestion{ style: "margin: 0 25px; "}= @task.question
   %div.CRresponsespace{ style: "min-height: 175px; width: 97.4%; #{if @task.text? then 'margin-top: 20px;' end}" }
     %h4{ style: "text-align: center; margin-bottom: 12px; font-size: 17px; border-bottom: 1px solid rgba(0, 0, 0, .1); width: 150px; margin-right: auto; margin-left: auto;" } Your answer:
 
