added active_section class, js needs work

--- a/app/assets/stylesheets/launchpad.css.scss
+++ b/app/assets/stylesheets/launchpad.css.scss
@@ -85,6 +85,7 @@ $success_color: #62c462;
         
         .pointsandprogress { display:inline-block; font-size:10px; font-style:italic; float:right; text-align:right; margin-top:-6px; width:24%;}
         .pointsandprogress div { margin-bottom:-16px;}
+        .active_section { font-weight: bold; }
       }
       a { font-size:14px; }
     }
