--- a/app/views/modals/_login.html.haml
+++ b/app/views/modals/_login.html.haml
@@ -27,8 +27,9 @@
             %span.landingbuttontext Sign in with Facebook »
         
         %div{style:"padding:12px;"}
-          %p
-            = link_to "Sign in with email & password", signin_path
+          - unless current_user
+            %p
+              = link_to "Sign in with email & password", signin_path
           %span Learn about these sign in options
           %span
             %a#signin_options_pop.mb-tooltip
