remove limit on profile crs

--- a/app/views/pages/profile.html.haml
+++ b/app/views/pages/profile.html.haml
@@ -152,7 +152,7 @@
                 = link_to "Add new CR", challenge_path(enrollment.path.permalink, c: true, type: Task::CHECKIN), class: "button button-small button-actionable", style: "float: right; top: 2px; right: -3px; position: relative;"
               %h4 #{enrollment.creative_responses.count} Creative Responses
               %div.profilecontent
-                = render "newsfeed/feed", feed: NewsfeedHelper::Feed.new(params, current_user, nil, enrollment.creative_responses.where("completed_tasks.status_id = ?", Answer::CORRECT).limit(5))                
+                = render "newsfeed/feed", feed: NewsfeedHelper::Feed.new(params, current_user, nil, enrollment.creative_responses.where("completed_tasks.status_id = ?", Answer::CORRECT))                
   
             %hr
             %div.taskbucket
